--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2379,7 +2379,6 @@ body {
   min-height: 77px;
 }
 
-<<<<<<< HEAD
 .about-section .paragraph.about-content ul {
   list-style-type: disc !important;
   list-style-position: outside !important; /* force outside bullets */
@@ -2397,9 +2396,15 @@ ul li::before {
   color: black;
 } */
 
+.textiles-slider-content .paragraph {
+  word-wrap: break-word;   
+  overflow-wrap: anywhere;
+  white-space: normal;  
+  /* max-height: 200px;        
+  overflow-y: auto;          */
+}
 
-=======
->>>>>>> 721728c22a7a9d42ff6a0a1641aae72537001e60
+
 @keyframes smallScale {
   0% {
     transform: scale(1);
